[package]
name = "fcmlib"
version = "0.1.0"
repository = "https://github.com/justjanne/fcmlib/"
authors = ["Janne Mareike Koschinski <mail@justjanne.de>"]
description = "Library to read and write Brother's FCM plotter files"
readme = "README.md"
license = "MPL-2.0"
keywords = ["plotter", "parser"]
categories = ["encoding"]
edition = "2021"
exclude = ["/.*", "/tests"]

[dependencies]
nom = "7.1.3"
log = "0.4.20"
bitflags = "2.4.2"

[lints.rust]
unsafe_code = "forbid"
